# vllm-ascend

./: .dockerignore  .gitignore  dispatch_ffn_combine_timeline.drawio  setup.py
.cursor/rules/: verify-patch-before-rebuild.mdc
.github/workflows/: _e2e_nightly_multi_node.yaml  _e2e_nightly_single_node.yaml  _e2e_nightly_single_node_models.yaml  _e2e_test.yaml  _nightly_image_build.yaml  _optional_smart_e2e.yaml  _parse_trigger.yaml  _pre_commit.yml  _schedule_image_build.yaml  bot_pr_create.yaml  dispatch_main2main_bisect.yaml  labeled_doctest.yaml  pr_test_full.yaml  pr_test_light.yaml  push_build_csrc_cache.yaml  schedule_doc_translate.yaml
csrc/mc2/dispatch_ffn_combine/: dispatch_ffn_combine_kernel_report.md
csrc/mc2/dispatch_ffn_combine/op_host/: CMakeLists.txt  dispatch_ffn_combine_tiling.cpp
results/debug/: BARRIER_COMPARE_SUMMARY.md
results/debug/ws8_ep8_hidden4096_imhidden2048_numtokens16384_topk8/: ANALYSIS.md
results/debug/ws8_ep8_hidden6144_imhidden3072_numtokens8192_topk8/: ANALYSIS.md
results/debug/ws8_ep8_hidden7168_imhidden3584_numtokens8192_topk8/: ANALYSIS.md
results/debug/ws8_ep8_hidden7680_imhidden3840_numtokens8192_topk8/: ANALYSIS.md
results/debug/ws8_ep8_hidden7936_imhidden3968_numtokens8192_topk8/: ANALYSIS.md
results/sweeps/: AUDIT_CONSTRAINTS.md  COMBINE_BARRIER_STITCH_AUDIT.json  COMBINE_BARRIER_STITCH_AUDIT.md  SUMMARY.md
results/sweeps/by_hidden/: .timeline_aggregation.json  manifest.json  summary_bandwidth.json
results/sweeps/by_imhidden/: manifest.json  summary_bandwidth.json
results/sweeps/by_numtokens/: manifest.json  summary_bandwidth.json
results/sweeps/by_topk/: manifest.json  summary_bandwidth.json
tools/dffc_profile/: README.md  TIMELINE_RELATIVE_MEDIAN_PLAN.md  __init__.py  _patch_kernel_v5.py  bandwidth.py  bootstrap_ops.py  calc_bandwidth.py  cases.py  gen_timeline.py  install_offline.sh  parse_profile.py  plot_sweep_bandwidth.py  plot_sweep_timelines.py  profile_constants.py  profile_utils.py  rebuild_mc2.sh  regen_sweep_axis_timelines.py  rerun_profile_cases.py  run_case.py  run_one_case.py  run_param_sweep.py  run_smoke.sh  run_sweep.sh  source_env.sh  sweep_grids.py  timeline_backup.py  validate_profile.py
tools/dffc_profile/analysis/: audit_profile_constraints.py  (+4 more)
(+2661 files in other folders)
